--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-  <p>Esta página web es una página HTML válida.aAAAAAAAAAAAAAA</p>
+  <p>Esta página web es una página HTML válida.</p>
 </body>
 </html>
