--- a/app/index.html
+++ b/app/index.html
@@ -44,12 +44,13 @@
                     <div class="col-md-4">
                         <div class="top-bar-right">
                             <div class="social">
+                                <a href="login.html"><body> Iniciar Sesión </body></i></a>
+                                <a href="signUp.html"><body> Registrarse </body></i></a>
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
                                 <a href=""><i class="fab fa-linkedin-in"></i></a>
                                 <a href=""><i class="fab fa-instagram"></i></a>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
