--- a/app/signUp.html
+++ b/app/signUp.html
@@ -28,7 +28,7 @@
           </div>
           <div class="form-group">
                <input type="email" class="form-control" id="email" placeholder="Email">
-                              </div>
+         </div>
                               
                             
      <div class="form-group">
@@ -39,7 +39,7 @@
      </div>
      <div class="d-flex flex-row align-items-center justify-content-between">
         <a href="#">Login</a>
-                                  <button class="btn btn-primary">Create Account</button>
+               <button class="btn btn-custom">Create Account</button>
             </div>
          </form>
        </div>
