--- a/app/listaAdopcion.html
+++ b/app/listaAdopcion.html
@@ -95,4 +95,16 @@
         </div>
         <!-- Page Header End -->
     
+        <!-- Animal List Start-->
+        <header class="header">
+            <ul>
+                <li>
+                    <div class= "">
+                        <em><h1>LISTA DE ADOPCIÓN</h1></em>
+                    </div>  
+                </li>
+            </ul>
+        </header>
+
+
 </html>
