--- a/app/listaAdopcion.html
+++ b/app/listaAdopcion.html
@@ -1,7 +1,3 @@
-<?php
-    include_once "login.php";
-?>
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -99,7 +95,7 @@
         <header class="header">
             <ul>
                 <li>
-                    <div class= "">
+                    <div class= "header">
                         <em><h1>LISTA DE ADOPCIÓN</h1></em>
                     </div>  
                 </li>
