--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-        <!-- Template Stylesheet -->
+        <!-- Template Stylesheet prueba de gorka -->
         <link href="css/style.css" rel="stylesheet">
     </head>
 
