--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>HELPZ - Free Charity Website Template</title>
+        <title>NuevaVida - Adopta a un animal</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Adopcion de animales NuevaVida" name="keywords">
+        <meta content="Adopcion de animales NuevaVida" name="description">
 
-        <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <!-- Favicon (icono de PESTAÑA)-->
+        <link href="img/icono.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
         
-        <!-- CSS Libraries -->
+        <!-- Librerías CSS -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
