--- a/app/index.html
+++ b/app/index.html
@@ -33,11 +33,11 @@
                         <div class="top-bar-left">
                             <div class="text">
                                 <i class="fa fa-phone-alt"></i>
-                                <p>+123 456 7890</p>
+                                <p>+34 123 45 56 78</p>
                             </div>
                             <div class="text">
                                 <i class="fa fa-envelope"></i>
-                                <p>info@example.com</p>
+                                <p>adopciones@nuevavida.com</p>
                             </div>
                         </div>
                     </div>
@@ -59,14 +59,14 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">Helpz</a>
+                <a href="index.html" class="navbar-brand">NuevaVida</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="listaAdopcion.html" class="nav-item nav-link">Lista de Adopcion</a>
+                        <a href="index.html" class="nav-item nav-link active">Página Principal</a>
+                        <a href="listaAdopcion.html" class="nav-item nav-link">Lista de Adopción</a>
                     </div>
                 </div>
             </div>
@@ -80,35 +80,32 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-1.jpg" alt="Image">
+                            <img src="img/carousel-1.jpg" alt="Imagen superadorable de perritos">
                         </div>
                         <div class="carousel-text">
-                            <h1>Let's be kind for children</h1>
+                            <h1>Da una nueva vida a los animales</h1>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac consequat at lectus in malesuada
+                                Ellos jamás te abandonarían. No lo hagas tú.
                             </p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-2.jpg" alt="Image">
+                            <img src="img/carousel-2.jpg" alt="Imagen superadorable de perritos para que te sientas culpable">
                         </div>
                         <div class="carousel-text">
-                            <h1>Get Involved with helping hand</h1>
+                            <h1>Tu gesto marca la diferencia. Involúcrate</h1>
                             <p>
-                                Morbi sagittis turpis id suscipit feugiat. Suspendisse eu augue urna. Morbi sagittis, orci sodales varius fermentum, tortor
+                                Es muy poco lo que cuesta hacerlos felices.
                             </p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-3.jpg" alt="Image">
+                            <img src="img/carousel-3.jpg" alt="Imagen superadorable de perritos que te derrite el corazón">
                         </div>
                         <div class="carousel-text">
-                            <h1>Bringing smiles to millions</h1>
-                            <p>
-                                Sed ultrices, est eget feugiat accumsan, dui nibh egestas tortor, ut rhoncus nibh ligula euismod quam. Proin pellentesque odio
-                            </p>
+                            <h1>Para tí son sólo parte de tu vida. Para ellos, tú eres su vida entera.</h1>
                         </div>
                     </div>
                 </div>
@@ -126,31 +123,25 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="section-header">
-                            <p>Learn About Us</p>
-                            <h2>Worldwide non-profit charity organization</h2>
+                            <p>Sobre nosotros</p>
+                            <h2>Organización sin ánimo de lucro</h2>
                         </div>
                         <div class="about-tab">
                             <ul class="nav nav-pills nav-justified">
                                 <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="pill" href="#tab-content-1">About</a>
+                                    <a class="nav-link active" data-toggle="pill" href="#tab-content-1">Sobre nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" data-toggle="pill" href="#tab-content-2">Mission</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="pill" href="#tab-content-3">Vision</a>
+                                    <a class="nav-link" data-toggle="pill" href="#tab-content-2">Nuestra misión</a>
                                 </li>
                             </ul>
 
                             <div class="tab-content">
                                 <div id="tab-content-1" class="container tab-pane active">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vitae pellentesque turpis. Donec in hendrerit dui, vel blandit massa. Ut vestibulum suscipit cursus. Cras quis porta nulla, ut placerat risus. Aliquam nec magna eget velit luctus dictum. Phasellus et felis sed purus tristique dignissim. Morbi sit amet leo at purus accumsan pellentesque. Vivamus fermentum nisi vel dapibus blandit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Somos una humilde protectora de animales situada en Bilbao y nos encargamos de acoger perros y gatos que necesitan nuestra ayuda. Nuestros recursos son limitados, pero nuestro amor por los animales es inmenso ¿Nos Ayudas?
                                 </div>
                                 <div id="tab-content-2" class="container tab-pane fade">
-                                    Sed tincidunt, magna ut vehicula volutpat, turpis diam condimentum justo, posuere congue turpis massa in mi. Proin ornare at massa at fermentum. Nunc aliquet sed nisi iaculis ornare. Nam semper tortor eget est egestas, eu sagittis nunc sodales. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent bibendum sapien sed purus molestie malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                </div>
-                                <div id="tab-content-3" class="container tab-pane fade">
-                                    Aliquam dolor odio, mollis sed feugiat sit amet, feugiat ut sapien. Nunc eu dignissim lorem. Suspendisse at hendrerit enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed condimentum semper turpis vel facilisis. Nunc vel faucibus orci. Mauris ut mauris rhoncus, efficitur nisi at, venenatis quam. Praesent egestas pretium enim sit amet finibus. Curabitur at erat molestie, tincidunt lorem eget, consequat ligula.
+                                    Nos encargamos del tratamiento y recuperación de los animales que recogemos ya que muchos nos llegan en condiciones deplorables. Los alimentamos y cuidamos hasta que encuentren su familia definitiva. Necesitamos donaciones permanentemente para mantenerlos. Buscamos y seleccionamos familias para que puedan tener una vida mejor porque nuestros peludos quieren ¡DAROS TODO SU CARIÑO!
                                 </div>
                             </div>
                         </div>
@@ -169,8 +160,8 @@
                         <div class="facts-item">
                             <i class="flaticon-home"></i>
                             <div class="facts-text">
-                                <h3 class="facts-plus" data-toggle="counter-up">150</h3>
-                                <p>Countries</p>
+                                <h3 class="facts-plus" data-toggle="counter-up">289</h3>
+                                <p>Perros adoptados</p>
                             </div>
                         </div>
                     </div>
@@ -178,8 +169,8 @@
                         <div class="facts-item">
                             <i class="flaticon-charity"></i>
                             <div class="facts-text">
-                                <h3 class="facts-plus" data-toggle="counter-up">400</h3>
-                                <p>Volunteers</p>
+                                <h3 class="facts-plus" data-toggle="counter-up">195</h3>
+                                <p>Gatos adoptados</p>
                             </div>
                         </div>
                     </div>
@@ -187,8 +178,8 @@
                         <div class="facts-item">
                             <i class="flaticon-kindness"></i>
                             <div class="facts-text">
-                                <h3 class="facts-dollar" data-toggle="counter-up">10000</h3>
-                                <p>Our Goal</p>
+                                <h3 class="facts-dollar" data-toggle="counter-up">10325</h3>
+                                <p>€ recaudado</p>
                             </div>
                         </div>
                     </div>
@@ -196,8 +187,8 @@
                         <div class="facts-item">
                             <i class="flaticon-donation"></i>
                             <div class="facts-text">
-                                <h3 class="facts-dollar" data-toggle="counter-up">5000</h3>
-                                <p>Raised</p>
+                                <h3 class="facts-dollar" data-toggle="counter-up">50000</h3>
+                                <p>Meta 2023</p>
                             </div>
                         </div>
                     </div>
@@ -211,8 +202,8 @@
         <div class="causes">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Popular Causes</p>
-                    <h2>Let's know about charity causes around the world</h2>
+                    <p>Cuidado de los animales</p>
+                    <h2>Cómo cuidar de tus mascotas</h2>
                 </div>
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
@@ -220,8 +211,8 @@
                             <img src="img/causes-1.jpg" alt="Image">
                         </div>
                         <div class="causes-text">
-                            <h3>Lorem ipsum dolor sit</h3>
-                            <p>Lorem ipsum dolor sit amet elit. Phasell nec pretium mi. Curabit facilis ornare velit non vulputa</p>
+                            <h3>La alimentación</h3>
+                            <p>Todo sobre la comida que puedes y debes darles.</p>
                         </div>
                     </div>
                     <div class="causes-item">
@@ -229,8 +220,8 @@
                             <img src="img/causes-2.jpg" alt="Image">
                         </div>
                         <div class="causes-text">
-                            <h3>Lorem ipsum dolor sit</h3>
-                            <p>Lorem ipsum dolor sit amet elit. Phasell nec pretium mi. Curabit facilis ornare velit non vulputa</p>
+                            <h3>Estado de ánimo</h3>
+                            <p>Aprende a entender cómo se siente tu mascota, y a leer su lenguaje corporal.</p>
                         </div>
                     </div>
                     <div class="causes-item">
@@ -238,8 +229,8 @@
                             <img src="img/causes-3.jpg" alt="Image">
                         </div>
                         <div class="causes-text">
-                            <h3>Lorem ipsum dolor sit</h3>
-                            <p>Lorem ipsum dolor sit amet elit. Phasell nec pretium mi. Curabit facilis ornare velit non vulputa</p>
+                            <h3>Antiparásitos</h3>
+                            <p>¿Cuáles son las principales enfermedades que atacan a nuestros perros?</p>
                         </div>
                     </div>
                     <div class="causes-item">
@@ -247,8 +238,8 @@
                             <img src="img/causes-4.jpg" alt="Image">
                         </div>
                         <div class="causes-text">
-                            <h3>Lorem ipsum dolor sit</h3>
-                            <p>Lorem ipsum dolor sit amet elit. Phasell nec pretium mi. Curabit facilis ornare velit non vulputa</p>
+                            <h3>Otros problemas comunes</h3>
+                            <p>Aprende sobre los problemas más habituales de nuestros animales, y cómo tratarlos.</p>
                         </div>
                     </div>
                 </div>
@@ -262,8 +253,8 @@
         <div class="team">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Meet Our Team</p>
-                    <h2>Awesome guys behind our charity activities</h2>
+                    <p>Nuestro equipo</p>
+                    <h2>Personas increíbles tras una labor imprescindible</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
@@ -272,8 +263,8 @@
                                 <img src="img/team-1.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Donald John</h2>
-                                <p>Founder & CEO</p>
+                                <h2>Hugo Robles</h2>
+                                <p>Fundador</p>
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -289,8 +280,8 @@
                                 <img src="img/team-2.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>Chef Executive</p>
+                                <h2>Andreea Vasilica</h2>
+                                <p>Administración y redes</p>
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -306,25 +297,8 @@
                                 <img src="img/team-3.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Thomas Olsen</h2>
-                                <p>Chef Advisor</p>
-                                <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>James Alien</h2>
-                                <p>Advisor</p>
+                                <h2>Gorka Lombardero</h2>
+                                <p>Tesorero</p>
                                 <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
