--- a/app/index.html
+++ b/app/index.html
@@ -321,12 +321,12 @@
                     <div class="col-lg-7">
                         <div class="volunteer-content">
                             <div class="section-header">
-                                <p>Become A Volunteer</p>
-                                <h2>Let’s make a difference in the lives of others</h2>
+                                <p>Hazte Voluntario</p>
+                                <h2>Marca la diferencia en la vida de otros</h2>
                             </div>
                             <div class="volunteer-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non. Aliquam metus tortor, auctor id gravida, viverra quis sem. Curabitur non nisl nec nisi maximus. Aenean convallis porttitor. Aliquam interdum at lacus non blandit.
+                                    Explora y descubre todos los peros y gatos que puedes adoptar en nuestra protectora. Están en Málaga pero pueden viajar a cualquier parte de España, si tienes un hogar para darles. Usa los filtros para descubrirlos a todos.
                                 </p>
                             </div>
                         </div>
@@ -350,10 +350,10 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-contact">
-                            <h2>Our Head Office</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                            <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                            <p><i class="fa fa-envelope"></i>info@example.com</p>
+                            <h2>Nuestra perrera</h2>
+                            <p><i class="fa fa-map-marker-alt"></i>Artxanda, Bilbao</p>
+                            <p><i class="fa fa-phone-alt"></i>+34 123 45 67 89</p>
+                            <p><i class="fa fa-envelope"></i>adopciones@nuevavida.com</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -371,10 +371,7 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                        <p>&copy; <a href="#">nuevavida.com</a>, All Right Reserved.</p>
                     </div>
                 </div>
             </div>
