--- a/app/signUp.html
+++ b/app/signUp.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="es">
 <div class="container">
     <head>
 		<title>Pagina de login</title>
@@ -19,7 +21,8 @@
         <link href="css/style.css" rel="stylesheet">
         
     </head>
-
+    
+    <body>
       <h2 class="card-title text-center">Registro</h2>
       <div class="card-body py-md-4">
          <form _lpchecked="1">
@@ -44,10 +47,10 @@
                   <a 
                      href="#">Login
                   </a>
-                  <button 
-                     class="btn btn-custom">Create Account
-                  </button>
+                  <button class="btn btn-custom"> Registrarse</button>
             </div>
          </form>
        </div>
     </div>
+</body>
+</html>
