--- a/app/login.html
+++ b/app/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pagina de login</title>
+		<title>NuevaVida - Pagina de login</title>
         
 		<!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/icono.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
